[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/aseprite/lightbulb-unscrewed.png" type="Texture" id=1]
[ext_resource path="res://assets/light.png" type="Texture" id=2]
[ext_resource path="res://assets/spot.png" type="Texture" id=3]
[ext_resource path="res://scripts/LightBulb.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 9.74724

[node name="LightBulb" type="StaticBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.068779, 3.30143 )
shape = SubResource( 1 )

[node name="LightNode" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 2 )
energy = 0.7
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 30.0

[node name="Sprite" type="Sprite" parent="LightNode"]
texture = ExtResource( 1 )

[node name="Light" type="Sprite" parent="LightNode"]
visible = false
modulate = Color( 0.937255, 0.796078, 0.658824, 0.196078 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="LightMask" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.968627, 0.937255, 0.133333 )
scale = Vector2( 0.25, 0.25 )
z_index = 5
z_as_relative = false
texture = ExtResource( 2 )
